# reversi-game

./: CMakeLists.txt  README.md  Windows打包说明.md  audio_manager.cpp  audio_manager.h  console_othello.cpp  resource.h  resources.rc  reversi_sfml.cpp  run.bat  sound_definition.h
.github/workflows/: macos-build.yml  windows-single-exe.yml
archive/: 2.cpp  翻转棋.cpp
fonts/: README.txt
scripts/: pack-msys2-ucrt64.bat  pack-vs-vcpkg.ps1
